[package]
name = "TMM-Rust"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
directories = "5.0"
eframe = "0.29.0"
egui = "0.29.0"
egui_extras = { version = "0.29", features = ["default"] }
rfd = "0.14"
sysinfo = "0.31"
thiserror = "1.0"
bincode = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
indexmap = "2.13.0"
image = "0.24"

[build-dependencies]
winres = "0.1"